<resources>
    <string name="app_name">HackMITProject</string>

    <string name="warning">warning</string>
    <string name="button_CPR">CPR Emergency</string>
    <string name="button_EMT">Non CPR Emergency</string>
    <string name="button_MedLink">Not an emergency</string>
    <string name="action_settings">Settings</string>
    <string name="chief_complaint">Chief Complaint: (e.g. difficulty breathing, broken leg)</string>
    <string name="chief_complaint_prompt">Enter chief complaint here</string>
    <string name="location">Location: (e.g. floor, room number)</string>
    <string name="location_prompt">Enter location here</string>
    <string name="additional_info">Additional info:</string>
    <string name="additional_info_prompt">Add more details here</string>
    <string name="title_activity_wait_page">Request Handling</string>
    <string name="wait_message">Processing Request. Waiting to be claimed...</string>
    <string name="accepted_message">You have accepted the request!</string>
    <string name="eta_message">In how many minutes do you expect to arrive?</string>
    <string name="title_activity_accept_request">AcceptRequest</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_accept">Accept</string>
</resources>
