<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="wrap_content" android:layout_weight="1" android:id="@+id/map" tools:context=".MapsActivity"
        android:name="com.google.android.gms.maps.SupportMapFragment" />

    <TextView android:text="@string/chief_complaint" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000" />

    <EditText
        android:id="@+id/complaint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/chief_complaint_prompt"/>

    <TextView android:text="@string/location" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000" />

    <EditText
        android:id="@+id/location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/location_prompt"/>

    <TextView android:text="@string/additional_info" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000" />

    <EditText
        android:id="@+id/details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/additional_info_prompt"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Submit and continue"
        android:onClick= "toWait"
        android:textColor="#ffffff"
        android:background="#006699" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Cancel"
        android:onClick= "toMain"/>

</LinearLayout>