<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation = "vertical">


    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="wrap_content" android:layout_weight="1" android:id="@+id/map" tools:context=".MapsActivity"
        android:name="com.google.android.gms.maps.SupportMapFragment" />

    <TextView
        android:text="@string/chief_complaint" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Patient's Chief Complaint"
        android:id="@+id/complaint"
        android:textColor="#000000" />

    <TextView
        android:text="@string/location" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Patient's Location"
        android:id="@+id/patientlocation"
        android:textColor="#000000" />

    <TextView
        android:text="@string/additional_info" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Patient's Additional Info"
        android:id="@+id/additionalinfo"
        android:textColor="#000000" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="About how many minutes until you arrive?"
        android:id="@+id/minutes"
        android:text="0"
        android:inputType="number" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Accept"
            android:layout_weight="1"
            android:onClick="acceptRequest"
            android:textColor="#ffffff"
            android:background="#006699" />


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Reject"
            android:layout_weight="1"
            android:onClick="rejectRequest"
            />
    </LinearLayout>
</LinearLayout>